--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_251"/>
 	<classpathentry kind="lib" path="libs/jMTPe.jar"/>
 	<classpathentry kind="lib" path="libs/commons-io-2.5-javadoc.jar"/>
 	<classpathentry kind="lib" path="libs/commons-io-2.5.jar"/>
@@ -9,5 +8,7 @@
 	<classpathentry kind="lib" path="libs/commons-lang3-3.6.jar"/>
 	<classpathentry kind="lib" path="libs/jid3lib-0.5.4.jar"/>
 	<classpathentry kind="lib" path="libs/zip4j_1.3.2.jar"/>
+	<classpathentry kind="lib" path="libs/json-20220924.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/bin"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
